# standx-cli

./: .dockerignore  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_PLAN.md  HOMEBREW.md  HOMEBREW_PUBLISH.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.2-rc.1.md  RELEASE_NOTES_v0.6.2-rc.2.md  RELEASE_NOTES_v0.6.3-rc.1.md  RELEASE_NOTES_v0.6.3-rc.2.md  RELEASE_NOTES_v0.6.3-rc.3.md  RELEASE_NOTES_v0.7.0-rc.1.md  RELEASE_NOTES_v0.7.0.md  ROADMAP.md  SKILL.md  TESTING.md  TEST_REPORT.md  TEST_VALIDATION_REPORT.md  WORKFLOW.md  _meta.json  install.sh  package.json  skill.json  version.json
.claude/: settings.json
.claude/hooks/: changelog-reminder.sh
.clawhub/: README.md  origin.json
.github/workflows/: SECRETS_SETUP.md  ci.yml
.specstory/history/: 2026-02-24_09-26Z-安装最新-cargo.md  2026-02-24_10-09Z-understanding-error-message-in-terminal.md  2026-02-24_10-37Z-github-release-fetching-error.md  2026-03-04_15-11Z-review-of-commands-and-output-implementation.md  2026-03-04_15-15Z-standx-cli-codebase-architecture-overview.md
clawhub-publish/: README.md  SKILL.md  _meta.json  package.json  skill.json
clawhub-publish/references/: examples.md  homebrew.md  troubleshooting.md
crates/standx-cli/: Cargo.toml
crates/standx-cli/src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  output.rs  telemetry.rs
crates/standx-cli/src/commands/: account.rs  auth.rs  block.rs  config.rs  dashboard.rs  lag_recorder.rs  leverage.rs  margin.rs  market.rs  mod.rs  order.rs  portfolio.rs  stream.rs  trade.rs  util.rs
crates/standx-cli/src/commands/maker/: canary.rs  config.rs  cycle.rs  external_feed.rs  feed.rs  ledger.rs  market_data.rs  mod.rs  model.rs  notify.rs  output.rs  pipeline.rs  process_lock.rs  recovery.rs  replay.rs  runtime.rs  runtime_state.rs  startup.rs
crates/standx-cli/src/commands/maker/runtime/: cycle_flow.rs  events.rs  lifecycle.rs  mod.rs  recovery_flow.rs  state.rs
crates/standx-cli/src/commands/maker/runtime/tests/: account_events.rs  mod.rs  order_events.rs  recovery.rs  runtime_flow.rs
crates/standx-cli/tests/: PHASE2_BREAKDOWN.md  integration_tests.rs  unit_tests.rs
crates/standx-cli/tests/e2e/: mod.rs  new_user_journey.rs  trader_workflow.rs
crates/standx-cli/tests/integration/: cli_commands.rs  cli_market_commands.rs  cli_output_formats.rs
crates/standx-cli/tests/unit/models/: market_data_test.rs  position_test.rs
crates/standx-cli/tests/unit/utils/: error_test.rs  time_parser_test.rs
crates/standx-maker/: Cargo.toml
crates/standx-maker/src/: account_projection.rs  external_guard.rs  inventory.rs  latency.rs  ledger.rs  lib.rs  market_data.rs  ownership.rs  performance.rs  recovery.rs  replay.rs  risk.rs  runtime.rs  volatility.rs
crates/standx-sdk/: Cargo.toml
crates/standx-sdk/src/: account_stream.rs  lib.rs  maker.rs  models.rs  order_response.rs  websocket.rs
crates/standx-sdk/src/auth/: credentials.rs  mod.rs
crates/standx-sdk/src/client/: account.rs  mod.rs  order.rs  tests.rs
deploy/: README.md
deploy/docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
deploy/launchd/: com.standx.maker.plist  com.standx.openobserve-catchup.plist  standx-maker-supervise.sh
deploy/openobserve/: .env.example  compose.yaml
deploy/systemd/: maker-stage2-ab.env.example  maker-stage2-hype-ab.env.example  maker.env.example  standx-maker-stage2-ab.service  standx-maker.service  standx-notify.sh  standx-notify@.service  standx-openobserve-catchup.service
docs/: 01-getting-started.md  02-authentication.md  03-market-data.md  04-account.md  05-orders.md  06-trading.md  07-leverage-margin.md  08-streaming.md  09-output-formats.md  10-special-features.md  11-troubleshooting.md  12-version-checklist.md  13-maker.md  14-maker-live-gate.md  15-openobserve.md  16-ws-iteration-goals.md  17-ws-command-canary-quickstart.md  18-maker-strategy-roadmap.md  19-maker-stage2-live-ab-runbook.md  20-maker-short-term-roadmap-2026-07.md  21-maker-stage3-live-ab-runbook.md  22-maker-stage3v1-guard-design.md  README.md  create-docs.sh
docs/adr/: 0001-maker-recovery-supervision.md
docs/evidence/: lag-recorder-hype-result-2026-07-22.md  lag-recorder-tool-delivery-2026-07-20.md  maker-live-gate-2026-07-10.md  maker-stage2-fill-attribution-2026-07-19.md  maker-stage3-canary-2026-07-21.md  (+9 more)
examples/: maker-bnb-100u-conservative.toml  maker-replay-trace.ndjson  maker-stage2-hype-baseline.toml  maker-stage2-hype-candidate.toml  maker-stage2-hype-wide12.toml  maker-stage2-xag-baseline.toml  maker-stage2-xag-candidate.toml  maker-stage3-hype-baseline.toml  maker-stage3-hype-candidate.toml  maker-stage3v1-hype-baseline.toml  maker-stage3v1-hype-candidate.toml  maker-tsla-100u-conservative.toml  maker-xag-100u-conservative.toml  maker-xag-100u-standard.toml  maker-xag-100u.toml  maker.toml
homebrew/: standx-cli.rb
openclaw/: README.md  SKILL.md  skill.json
references/: api-docs.md  examples.md  troubleshooting.md
scripts/: check_actions.sh  lag_analysis.py  maker_creep_replay.py  maker_markout_ab.py  maker_mo_curve_tail.py  maker_run_manifest.py  maker_tail_arbitration.py  openobserve_alerts.py  openobserve_catchup.sh  openobserve_dashboard.py  openobserve_ingest.py  openobserve_query.py  run_maker_observed.sh  run_maker_stage2_ab.sh  scrape_actions.py  test_maker_run_manifest.py  test_maker_stage2_webhooks.py  test_openobserve_dashboard.py  test_openobserve_ingest.py  verify_maker_stage1.py
src/: cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  telemetry.rs  websocket.rs
tests/: E2E_TEST_REPORT.md  GITHUB_ISSUES.md  PHASE2_BREAKDOWN.md  TESTING_DESIGN.md  TESTING_GAP_PLAN.md  e2e_tests.rs  integration_tests.rs
(+23 files in other folders)
