[workspace]
resolver = "2"
members = ["crates/standx-sdk", "crates/standx-cli"]

[workspace.package]
edition = "2021"
authors = ["Kimi Claw"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wjllance/standx-cli"
rust-version = "1.75"

[workspace.dependencies]
# Async
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
dirs = "6.0"

# Output formatting
tabled = "0.18"
